    - fixed a bug in Config_File that would incorrectly booleanize values that
      weren't really booleans. (Andrei)

Version 1.4.3
-------------
    - added regex_replace modifier, documented. (Monte)
    - added debugging console feature and custom function assign_debug_info,
      documented. (Monte)
    - added 'scope' attribute for {config_load}, 'global' is now deprecated but
      is still supported. (Andrei)
    - reduced template symbol table pollution by moving config array into the
      class itself. (Andrei)
    - fixed a bug with passing quoted arguments to modifiers inside {if}
      statements. (Andrei, Sam Beckwith)
    - added security features for third party template editing, documented (Monte)
    - added assign custom function, documented. (Monte)
    - fixed bug with template header using version instead of _version. (Monte)
    - fixed a problem with putting $ followed by numbers inside {strip} and
      {/strip} tags. (Andrei)
    - fixed Config_File class to allow empty config paths (defaults to current
      directory). (Andrei)

Version 1.4.2
-------------
    - move $version to internal variable, remove from docs. (Monte)
    - cleaned up compiled templates global scope by moving some variables into
      the class itself. (Andrei)
    - fixed a bug that would not allow referring to a section in the including
      file from the included file. (Andrei)
    - configs directory missing from 1.4.1 release, added back in. (Monte)
    - added windows include_path setup instructions to FAQ & QUICKSTART.
      (Monte)

Version 1.4.1
-------------
    - fix LOCK_EX logic for all windows platforms (Monte)
    - fixed indexing by section properties with the new syntax. (Andrei)
    - updated Smarty to use absolute paths when requiring/including Smarty
      components. (Andrei, John Lim)

Version 1.4.0
-------------
    - added {capture}{/capture} function, documented (Monte)
    - added {counter} function, documented (Monte) 

Version 1.4.0b2