@@ -5,7 +5,6 @@ require("Smarty.class.php");
 $smarty = new Smarty;
 
 $smarty->compile_check = true;
-$smarty->debugging = true;
 
 $smarty->assign("now", time());
 
